--- a/work.css
+++ b/work.css
@@ -26,7 +26,7 @@ span{
 p{
     font-family: sans-serif;
     word-spacing: 1.5px;
-    color: white;
+    color: black;
 }
 li{
     font-family: sans-serif;
