--- a/tele.css
+++ b/tele.css
@@ -1,30 +1,37 @@
 *{
     margin: 0;
     padding: 0;
-}body{
+}
+
+body{
     background-color: rgb(160, 154, 154);
 }
+
 .headerdiv{
     margin-top: 40px;
     width: 500px;
     margin-left: 350px;
 }
+
 .motherdiv1{
     display: flex;
     width: 200%;
     margin-top: 50px;
 }
+
 .motherdiv2{
     display: flex;
     width: 200%;
     margin-top: 50px;
 }
+
 .first{
     background-color: rgb(112, 149, 112);
     width: 300px;
     margin-left: 50px;
     border-radius: 10px;
 }
+
 .second{
     background-color: white;
     width: 300px;
@@ -32,6 +39,7 @@
     margin-right: 20px;
     border-radius: 10px;
 }
+
 .third{
     background-color: rgb(112, 149, 112);
     width: 300px;
@@ -45,17 +53,20 @@
     margin-right: 20px;
     border-radius: 10px;
 }
+
 .fifth{
     background-color: rgb(112, 149, 112);
     width: 300px;
     margin-right: 50px;
     border-radius: 10px;
 }
+
 h1{
     margin-bottom: 20px;
     margin-left: 20px;
     color: green;
 }
+
 p{
     margin-left: 20px;
     margin-right: 20px;
